converter test thomas to java

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
+        <!-- Apache POI starts -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.12</version>
+        </dependency>
+        <!-- Apache POI ends -->
 
 	</dependencies>
 
